# ChangeLog for xfce-base/libxfce4util
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4util/ChangeLog,v 1.129 2009/07/27 17:28:09 nixnut Exp $

  27 Jul 2009; nixnut <nixnut@gentoo.org> libxfce4util-4.6.1.ebuild:
  ppc stable #265587

  30 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  libxfce4util-4.6.1.ebuild:
  Stable on alpha, bug #265587

  28 Jun 2009; Brent Baude <ranger@gentoo.org> libxfce4util-4.6.1.ebuild:
  Marking libxfce4util-4.6.1 ppc64 stable for bug 265587

  22 Jun 2009; Raúl Porcel <armin76@gentoo.org> libxfce4util-4.6.1.ebuild:
  arm/ia64/sh stable wrt #265587

  14 Jun 2009; Jeroen Roovers <jer@gentoo.org> libxfce4util-4.6.1.ebuild:
  Stable for HPPA (bug #265587).

  13 Jun 2009; Tiago Cunha <tcunha@gentoo.org> libxfce4util-4.6.1.ebuild:
  stable sparc, bug 265587

  10 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  libxfce4util-4.6.1.ebuild:
  stable x86, bug 265587

  09 Jun 2009; Jeremy Olexa <darkside@gentoo.org> libxfce4util-4.6.1.ebuild:
  amd64 stable, bug 265587

  21 May 2009; Christoph Mende <angelos@gentoo.org>
  libxfce4util-4.4.3.ebuild, libxfce4util-4.6.1.ebuild:
  Fixed license (bug #268796)

*libxfce4util-4.6.1 (21 Apr 2009)

  21 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
  -libxfce4util-4.6.0.ebuild, +libxfce4util-4.6.1.ebuild:
  Version bump for xfce-4.6.1 release, remove old

  22 Mar 2009; Christoph Mende <angelos@gentoo.org>
  libxfce4util-4.6.0.ebuild:
  Bumped glib dependency to 2.12

  13 Mar 2009; Raúl Porcel <armin76@gentoo.org> libxfce4util-4.4.3.ebuild,
  libxfce4util-4.6.0.ebuild:
  Add ~sh

*libxfce4util-4.6.0 (10 Mar 2009)

  10 Mar 2009; Christoph Mende <angelos@gentoo.org>
  +libxfce4util-4.6.0.ebuild:
  Xfce-4.6 bump

  22 Dec 2008; Christoph Mende <angelos@gentoo.org>
  -libxfce4util-4.4.2.ebuild:
  Removed old

  15 Dec 2008; Jeroen Roovers <jer@gentoo.org> libxfce4util-4.4.3.ebuild:
  Stable for HPPA (bug #249942).
