@@ -1,6 +1,6 @@
 DIST libxfce4util-4.4.3.tar.bz2 390566 RMD160 256f4e759562113be2dc82265752a218340deeda SHA1 08e9d64e4c66ea2420a9a0ab678cf5a064585b37 SHA256 cbed16df6bf97e3e9cd885801db0be012ec70cd1d99c1b28559923c66f877770
 DIST libxfce4util-4.6.1.tar.bz2 405327 RMD160 e54d6c7291bbd7e658bc612b52b1c8d02c47d5ae SHA1 6d14099aa095b2f5d9b6a4348968b741b9ad661d SHA256 ceecdc7d3c89f547606c2d77a8a42ccf9975c809374fab84ff0833a08510c16b
 EBUILD libxfce4util-4.4.3.ebuild 643 RMD160 06ced2d0f6b15c86971524783edd139673e71dbc SHA1 17f334d74b9e1c292bf559cec013a097feb6d84f SHA256 7d256fc180a66d5500b3311e0cbcb40e9537255d6517d4218ef951c202442892
-EBUILD libxfce4util-4.6.1.ebuild 680 RMD160 888855f9982bb7169bdb47d5e7078de4cf73446c SHA1 25aae3a2b5e12b84e1427d47d3cf87b70a9770c5 SHA256 fabe4dd5cd4c88d17d77e514af50263526f1f90dd63d2699da395d2c5aeaea2c
-MISC ChangeLog 15758 RMD160 8b54356fba7b6e9344bf2dd212213b4a879887fb SHA1 33aeed690cf139f17c830932f4dad442001cbb55 SHA256 fabf9d1b59e20cdfd869c0ea049408e61e2150cd326958188fe96ab5d5ef4085
+EBUILD libxfce4util-4.6.1.ebuild 703 RMD160 b1f1b362e262db58d2e8a1e34cfe04d0b385c40f SHA1 8076a1a1dcfe3678af8c639221d60b4288af331d SHA256 53a13e701ea9f21a9b05a7f23628ddc33f4469b76e3831625755340ec3f00982
+MISC ChangeLog 15866 RMD160 a3d95426c941b1fb87a420c111ce0c4462b739b5 SHA1 6d0dce50d4858e386f3fead02f7ebf4edeb478e1 SHA256 bf9051c8b4c2643a91180fb7d111b4c3e1e451adefa5c6b8427e602bf00a2870
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
