@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/libxfce4util
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4util/ChangeLog,v 1.129 2009/07/27 17:28:09 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfce4util/ChangeLog,v 1.130 2009/08/01 20:12:19 ssuominen Exp $
+
+  01 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
+  libxfce4util-4.6.1.ebuild:
+  Use xfconf.eclass.
 
   27 Jul 2009; nixnut <nixnut@gentoo.org> libxfce4util-4.6.1.ebuild:
   ppc stable #265587
